# cuBow

./: .gitignore  CMakeLists.txt
src/: BowVector.cpp  BowVector.h  CMakeLists.txt  Cluster.cpp  Cluster.h  LoopCheck.cpp  LoopCheck.h  Makefile  Tools.hpp  Type.h  Vocabulary.cpp  Vocabulary.h  cmake_install.cmake  cuBowVector.cu  cuFeature.cu  cuScore.cu  cuVocabulary.c  cuVocabulary.cpp  cuVocabulary.h  main.cpp
tests/: BoWvec.cpp  CMakeLists.txt  featureTest.cpp  irisTest.cpp  mainTest.cpp  trainTree.cpp  turTest.cpp
